--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html>
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <meta name="viewport" content="initial-scale = 1.0,maximum-scale = 1.0" />
   <link rel="stylesheet" href="/css/jqtouch.css" type="text/css" media="screen" title="no title" charset="utf-8">
   <link rel="stylesheet" href="/css/master.css" type="text/css" media="screen" title="no title" charset="utf-8">
   <script src="/j/vendor/jquery-1.7.js"></script>
@@ -13,6 +14,9 @@
   <meta name="author" content="Yichao Wang">
 </head>
 <body>
+    <!-- <div id="login">
+          
+        </div> -->
     <div id="feed_1">
       <div class="feed-container">
         <h1>Feed 1</h1>
