--- a/index.html
+++ b/index.html
@@ -14,29 +14,50 @@
   <meta name="author" content="Yichao Wang">
 </head>
 <body>
-    <!-- <div id="login">
-          
-        </div> -->
+    <div id="login">
+      <div class="toolbar">
+        <a href="#" class="back">back</a>
+        <h1>Flippy</h1>
+      </div>
+      <div class="content-container">
+        <form action="index_submit" method="get" accept-charset="utf-8">
+          <label>Username:</label>
+          <input name="username" type="text"/>
+          <label>Password:</label>
+          <input name="username" type="password"/>
+          <p><input type="submit" value="Continue &rarr;"></p>
+        </form>
+      </div>
+    </div>
     <div id="feed_1">
-      <div class="feed-container">
+      <div class="toolbar">
+        <a href="#" class="back">back</a>
+        <h1>Flippy</h1>
+      </div>
+      <div class="content-container">
         <h1>Feed 1</h1>
         <a href="#feed_2" class="flip">next</a>
-        <a href="#" class="goback">back</a>
       </div>
     </div>
     <div id="feed_2">
-      <div class="feed-container">
+      <div class="toolbar">
+        <a href="#" class="back">back</a>
+        <h1>Flippy</h1>
+      </div>
+      <div class="content-container">
         <h1>Feed 2</h1>
         <a href="#feed_1" class="flip">previous</a>
         <a href="#feed_3" class="flip">next</a>
-        <a href="#" class="goback">back</a>
       </div>
     </div>
     <div id="feed_3">
-      <div class="feed-container">
+      <div class="toolbar">
+        <a href="#" class="back">back</a>
+        <h1>Flippy</h1>
+      </div>
+      <div class="content-container">
         <h1>Feed 3</h1>
         <a href="#feed_2" class="flip">previous</a>
-        <a href="#" class="goback">back</a> 
       </div>
     </div>
 </body>
